--- a/src/app/communications/presentation/pages/inbox/communication-detail/communication-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox/communication-detail/communication-detail.component.html
@@ -35,7 +35,7 @@
         } @case ("InternalProcedure") {
         <internal-communication [procedure]="internal" />
         } @case ("ProcurementProcedure") {
-        <procurement-communication [procedure]="procedure()" [isReveived]="true" />
+        <procurement-communication [procedure]="procedure()" [isReceived]="false" />
         } @default {
         <p>Type Procedure is not define</p>
         } }
