--- a/src/app/procedures/presentation/pages/procurements-manage/procurements-manage.component.html
+++ b/src/app/procedures/presentation/pages/procurements-manage/procurements-manage.component.html
@@ -129,7 +129,7 @@
                         <button
                           mat-menu-item
                           [disabled]="!element.isPrintEnabled($index)"
-                          (click)="generateDoc(element, $index)"
+                          (click)="generateDocument(element, $index)"
                         >
                           <mat-icon>print</mat-icon>
                           <span>Imprimir</span>
