correcion vista home

--- a/src/app/communications/presentation/components/procurement-communication/procurement-communication.component.html
+++ b/src/app/communications/presentation/components/procurement-communication/procurement-communication.component.html
@@ -156,6 +156,18 @@
           </div>
           <div>
             <mat-form-field appearance="outline">
+              <mat-label>Codigo del proyecto </mat-label>
+              <input matInput formControlName="codigoProyecto" />
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Codigo del proyecto </mat-label>
+              <input matInput formControlName="codigoProyecto" />
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="outline">
               <mat-label>CUCE</mat-label>
               <input matInput formControlName="cuce" />
             </mat-form-field>
