--- a/src/app/communications/presentation/pages/inbox/communication-detail/communication-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox/communication-detail/communication-detail.component.html
@@ -35,7 +35,10 @@
         } @case ("InternalProcedure") {
         <internal-communication [procedure]="internal" />
         } @case ("ProcurementProcedure") {
-        <procurement-communication [procedure]="procedure()" [isReceived]="false" />
+        <procurement-communication
+          [procedure]="procedure()"
+          [isReceived]="communication()?.status === 'received'"
+        />
         } @default {
         <p>Type Procedure is not define</p>
         } }
