--- a/src/app/layout/presentation/pages/settings/settings.component.html
+++ b/src/app/layout/presentation/pages/settings/settings.component.html
@@ -175,9 +175,9 @@
   <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
     <mat-tab label="Usuario"></mat-tab>
     <mat-tab label="Personalizacion">
-      <!-- <div class="sm:p-2 py-3">
+      <div class="sm:p-2 py-3">
         <theme-switcher />
-      </div> -->
+      </div>
       <div>
         <div class="px-4 sm:px-0">
           <h3 class="text-base/7 font-semibold text-gray-900">
