--- a/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
+++ b/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
@@ -95,7 +95,6 @@
             <mat-select
               [formControl]="bankServerSideCtrl"
               placeholder="Buscar destinatarios"
-              (selectionChange)="add(true)"
             >
               <mat-option>
                 <ngx-mat-select-search
@@ -123,7 +122,7 @@
           </mat-form-field>
         </div>
       </div>
-      <!-- <div class="flex items-center py-2">
+      <div class="flex items-center py-2">
         <div class="flex-1 text-lg font-medium">
           DESTINATARIOS ({{ recipients().length }}):
         </div>
@@ -143,7 +142,7 @@
             Copia
           </button>
         </div>
-      </div> -->
+      </div>
       <div class="overflow-y-scroll max-h-64">
         <mat-list role="list">
           @for (item of recipients(); track $index) {
