correcion administracion bandeja

--- a/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
+++ b/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
@@ -137,7 +137,7 @@
           <button
             mat-stroked-button
             (click)="add(false)"
-            [disabled]="!isCopyButtonEnabled()"
+            [disabled]="!isCopyEnabled()"
           >
             Copia
           </button>
