--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -74,16 +74,14 @@
 
     <ng-container matColumnDef="time">
       <th mat-header-cell *matHeaderCellDef>Duracion</th>
-      <td mat-cell *matCellDef="let element" class="sm:max-w-80">
-        @if(element.status==="rejected"){
-        <badge icon="warning" severity="danger" message="Rechazado" />
-        } @else {
-        <badge
-          icon="schedule"
-          severity="warning"
-          [message]="element.getExpirationMessage()"
-        />
-        }
+      <td mat-cell *matCellDef="let element">
+        @switch (element.status){ @case ('rejected') {
+        <badge severity="danger" message="Rechazado" />
+        } @case ('pending') {
+        <badge severity="warning" [message]="element.getExpirationMessage()" />
+        } @case ('auto-rejected') {
+        <badge severity="purple" message="Expirado" />
+        } @default () { Desconocido } }
       </td>
     </ng-container>
 
@@ -141,22 +139,49 @@
             element == expandedElement ? 'expanded' : 'collapsed'
           "
         >
-          <div class="flex flex-col px-2 pb-4 text-lg">
-            <div>
-              Para: {{ element.recipient.fullname | titlecase }} ({{
-                element.recipient.jobtitle
-              }})
-            </div>
-            <div>Nro. Interno: {{ element.citeCode }}</div>
-            @if(element.actionLog){
-            <div class="text-red-600">
-              {{ element.actionLog.fullname | titlecase }}:
-              <span class="font-bold">
-                {{ element.actionLog.description }}
-              </span>
-            </div>
-            <div>Fecha: {{ element.actionLog.date | date : "short" }}</div>
-            }
+          <div class="sm:px-6 py-3">
+            <dl class="text-sm">
+              <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
+                <dt class="font-medium">Destinatario:</dt>
+                <dd class="text-gray-700 sm:col-span-4">
+                  <span class="font-semibold text-base">
+                    {{ element.recipient.fullname | titlecase }}
+                  </span>
+                  <span> ({{ element.recipient.jobtitle }}) </span>
+                </dd>
+              </div>
+
+              <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
+                <dt class="font-medium">Fecha de envio:</dt>
+                <dd class="text-gray-700 sm:col-span-2">
+                  {{ element.sentDate | date : "short" }}
+                </dd>
+              </div>
+
+              <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
+                <dt class="font-medium">Instruccion / Proveido</dt>
+                <dd class="text-gray-700 sm:col-span-4">
+                  {{ element.reference }}
+                </dd>
+              </div>
+
+              @if(element.actionLog){
+              <div class="grid grid-cols-1 py-3 sm:grid-cols-5 text-red-600">
+                <dt class="font-medium">Descripcion rechazo:</dt>
+                <dd class="sm:col-span-2">
+                  <div class="block">
+                    [{{ element.actionLog.date | date : "short" }}]
+                  </div>
+                  <div class="block">
+                    {{ element.actionLog.fullname | titlecase }}
+                  </div>
+                  <div class="block">
+                   Motivo: {{ element.actionLog.description }}
+                  </div>
+                </dd>
+              </div>
+              }
+            </dl>
           </div>
         </div>
       </td>
