--- a/src/app/procedures/presentation/pages/procurements-manage/procurements-manage.component.html
+++ b/src/app/procedures/presentation/pages/procurements-manage/procurements-manage.component.html
@@ -17,8 +17,19 @@
     </div>
   </div>
 
-  <div class="mat-elevation-z8">
+  <div class="mat-elevation-z8 sm:px-4">
     <table mat-table [dataSource]="datasource()" multiTemplateDataRows>
+      <ng-container matColumnDef="send">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element" class="w-8">
+          @if(element.isActionable){
+          <mat-icon style="color: orangered">mark_email_unread </mat-icon>
+
+          } @else {
+          <mat-icon style="color: green">mark_email_read</mat-icon>
+          }
+        </td>
+      </ng-container>
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef>Alterno</th>
         <td
@@ -41,6 +52,7 @@
           {{ element.reference }}
         </td>
       </ng-container>
+
       <ng-container matColumnDef="mode">
         <th mat-header-cell *matHeaderCellDef>Tipo</th>
         <td mat-cell *matCellDef="let element">
