correccion validacion copias

--- a/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
+++ b/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
@@ -130,7 +130,7 @@
           <button
             mat-stroked-button
             (click)="add(true)"
-            [disabled]="!isOriginalButtonEnabled()"
+            [disabled]="!isOriginalEnabled()"
           >
             Original
           </button>
